code/java/TimeSeriesAPIforDigitalPortals/v2/README.md
<img alt="FactSet" src="https://www.factset.com/hubfs/Assets/images/factset-logo.svg" height="56" width="290">

# Time Series API for Digital Portals client library for Java

[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/timeseriesapifordigitalportals)](https://search.maven.org/artifact/com.factset.sdk/timeseriesapifordigitalportals)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 0.9.1
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>0.10.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>timeseriesapifordigitalportals</artifactId>
  <version>0.9.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:0.10.0"
    implementation "com.factset.sdk:timeseriesapifordigitalportals:0.9.1"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

```java

import com.factset.sdk.TimeSeriesAPIforDigitalPortals.*;
import com.factset.sdk.TimeSeriesAPIforDigitalPortals.auth.*;
import com.factset.sdk.TimeSeriesAPIforDigitalPortals.models.*;
import com.factset.sdk.TimeSeriesAPIforDigitalPortals.api.PricesApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class PricesApiExample {

    public static void main(String[] args) {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient();
        // HttpBasicAuth FactSetApiKey = (HttpBasicAuth) defaultClient.getAuthentication("FactSetApiKey");
        // FactSetApiKey.setUsername("YOUR USERNAME");
        // FactSetApiKey.setPassword("YOUR PASSWORD");

        PricesApi apiInstance = new PricesApi(defaultClient);
        String id = "id_example"; // String | Identifier of the notation.
        String from = "from_example"; // String | Date and time of the start point of the subsample (inclusive). `from` must be aligned to `granularity`. That is, the numerical value is an integral multiple of the time span value represented by `granularity`. The data accessible in the past is limited to a few weeks at most. Dates in the future are not allowed.
        String type = "trade"; // String | Type of the price as configured for the customer.
        String quality = "RLT"; // String | Quality of the price.
        String granularity = "1s"; // String | Subsample granularities suitable for intraday data.
        java.util.Set<String> attributes = Arrays.asList(); // java.util.Set<String> | Limit the attributes returned in the response to the specified set.
        try {
            InlineResponse2009 result = apiInstance.getPricesTimeSeriesIntradaySubsampleGet(id, from, type, quality, granularity, attributes);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling PricesApi#getPricesTimeSeriesIntradaySubsampleGet");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.TimeSeriesAPIforDigitalPortals.*;
import com.factset.sdk.TimeSeriesAPIforDigitalPortals.api.PricesApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

PricesApi apiInstance = new PricesApi(defaultClient);

```


## Documentation for API Endpoints

All URIs are relative to *http://api.factset.com/wealth/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*PricesApi* | [**getPricesTimeSeriesIntradaySubsampleGet**](docs/PricesApi.md#getPricesTimeSeriesIntradaySubsampleGet) | **GET** /prices/timeSeries/intraday/subsample/get | Single subsample intraday data for a notation.
*PricesApi* | [**postPricesTimeSeriesEodList**](docs/PricesApi.md#postPricesTimeSeriesEodList) | **POST** /prices/timeSeries/eod/list | End-of-day time series data for a notation.
*PricesApi* | [**postPricesTimeSeriesEodSubsampleGet**](docs/PricesApi.md#postPricesTimeSeriesEodSubsampleGet) | **POST** /prices/timeSeries/eod/subsample/get | Single subsample end-of-day data for a notation.
*PricesApi* | [**postPricesTimeSeriesEodSubsampleList**](docs/PricesApi.md#postPricesTimeSeriesEodSubsampleList) | **POST** /prices/timeSeries/eod/subsample/list | Subsampled end-of-day time series data for a notation.
*PricesApi* | [**postPricesTimeSeriesIntradayList**](docs/PricesApi.md#postPricesTimeSeriesIntradayList) | **POST** /prices/timeSeries/intraday/list | Intraday time series data for a notation.
*PricesApi* | [**postPricesTimeSeriesIntradaySubsampleList**](docs/PricesApi.md#postPricesTimeSeriesIntradaySubsampleList) | **POST** /prices/timeSeries/intraday/subsample/list | Subsampled intraday time series data for a notation.
*VendorApi* | [**getVendorChartIQTimeSeriesIntradaySubsampleGet**](docs/VendorApi.md#getVendorChartIQTimeSeriesIntradaySubsampleGet) | **GET** /vendor/chartIQ/timeSeries/intraday/subsample/get | Single subsample intraday data for a notation.
*VendorApi* | [**postVendorChartIQTimeSeriesEodList**](docs/VendorApi.md#postVendorChartIQTimeSeriesEodList) | **POST** /vendor/chartIQ/timeSeries/eod/list | End-of-day time series data for a notation.
*VendorApi* | [**postVendorChartIQTimeSeriesEodSubsampleGet**](docs/VendorApi.md#postVendorChartIQTimeSeriesEodSubsampleGet) | **POST** /vendor/chartIQ/timeSeries/eod/subsample/get | Single subsample end-of-day data for a notation.
*VendorApi* | [**postVendorChartIQTimeSeriesEodSubsampleList**](docs/VendorApi.md#postVendorChartIQTimeSeriesEodSubsampleList) | **POST** /vendor/chartIQ/timeSeries/eod/subsample/list | Subsampled end-of-day time series data for a notation.
*VendorApi* | [**postVendorChartIQTimeSeriesIntradaySubsampleList**](docs/VendorApi.md#postVendorChartIQTimeSeriesIntradaySubsampleList) | **POST** /vendor/chartIQ/timeSeries/intraday/subsample/list | Subsampled intraday time series data for a notation.


## Documentation for Models

 - [CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [ErrorMetaObject](docs/ErrorMetaObject.md)
 - [InlineObject](docs/InlineObject.md)
 - [InlineObject1](docs/InlineObject1.md)
 - [InlineObject2](docs/InlineObject2.md)
 - [InlineObject3](docs/InlineObject3.md)
 - [InlineObject4](docs/InlineObject4.md)
 - [InlineObject5](docs/InlineObject5.md)
 - [InlineObject6](docs/InlineObject6.md)
 - [InlineObject7](docs/InlineObject7.md)
 - [InlineObject8](docs/InlineObject8.md)
 - [InlineResponse200](docs/InlineResponse200.md)
 - [InlineResponse2001](docs/InlineResponse2001.md)
 - [InlineResponse20010](docs/InlineResponse20010.md)
 - [InlineResponse20010Data](docs/InlineResponse20010Data.md)
 - [InlineResponse20010DataSubsamples](docs/InlineResponse20010DataSubsamples.md)
 - [InlineResponse2001Data](docs/InlineResponse2001Data.md)
 - [InlineResponse2001Meta](docs/InlineResponse2001Meta.md)
 - [InlineResponse2002](docs/InlineResponse2002.md)
 - [InlineResponse2002Data](docs/InlineResponse2002Data.md)
 - [InlineResponse2003](docs/InlineResponse2003.md)
 - [InlineResponse2003Data](docs/InlineResponse2003Data.md)
 - [InlineResponse2004](docs/InlineResponse2004.md)
 - [InlineResponse2004Data](docs/InlineResponse2004Data.md)
 - [InlineResponse2004DataRange](docs/InlineResponse2004DataRange.md)
 - [InlineResponse2005](docs/InlineResponse2005.md)
 - [InlineResponse2005Data](docs/InlineResponse2005Data.md)
 - [InlineResponse2005DataPrices](docs/InlineResponse2005DataPrices.md)
 - [InlineResponse2006](docs/InlineResponse2006.md)
 - [InlineResponse2006Data](docs/InlineResponse2006Data.md)
 - [InlineResponse2006DataSubsample](docs/InlineResponse2006DataSubsample.md)
 - [InlineResponse2007](docs/InlineResponse2007.md)
 - [InlineResponse2007Data](docs/InlineResponse2007Data.md)
 - [InlineResponse2007DataSubsamples](docs/InlineResponse2007DataSubsamples.md)
 - [InlineResponse2008](docs/InlineResponse2008.md)
 - [InlineResponse2008Data](docs/InlineResponse2008Data.md)
 - [InlineResponse2008DataPrices](docs/InlineResponse2008DataPrices.md)
 - [InlineResponse2009](docs/InlineResponse2009.md)
 - [InlineResponse2009Data](docs/InlineResponse2009Data.md)
 - [InlineResponse2009DataSubsample](docs/InlineResponse2009DataSubsample.md)
 - [InlineResponse200Data](docs/InlineResponse200Data.md)
 - [InlineResponse200DataRange](docs/InlineResponse200DataRange.md)
 - [InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [PartialOutputObject](docs/PartialOutputObject.md)
 - [PricesTimeSeriesEodSubsampleGetData](docs/PricesTimeSeriesEodSubsampleGetData.md)
 - [PricesTimeSeriesEodSubsampleGetDataInterval](docs/PricesTimeSeriesEodSubsampleGetDataInterval.md)
 - [PricesTimeSeriesEodSubsampleListData](docs/PricesTimeSeriesEodSubsampleListData.md)
 - [PricesTimeSeriesIntradayListData](docs/PricesTimeSeriesIntradayListData.md)
 - [PricesTimeSeriesIntradayListDataRange](docs/PricesTimeSeriesIntradayListDataRange.md)
 - [PricesTimeSeriesIntradayListMeta](docs/PricesTimeSeriesIntradayListMeta.md)
 - [PricesTimeSeriesIntradayListMetaPagination](docs/PricesTimeSeriesIntradayListMetaPagination.md)
 - [StatusObject](docs/StatusObject.md)
 - [VendorChartIQTimeSeriesEodListData](docs/VendorChartIQTimeSeriesEodListData.md)
 - [VendorChartIQTimeSeriesEodListDataAdjustments](docs/VendorChartIQTimeSeriesEodListDataAdjustments.md)
 - [VendorChartIQTimeSeriesEodListDataRange](docs/VendorChartIQTimeSeriesEodListDataRange.md)
 - [VendorChartIQTimeSeriesEodListMeta](docs/VendorChartIQTimeSeriesEodListMeta.md)
 - [VendorChartIQTimeSeriesEodListMetaPagination](docs/VendorChartIQTimeSeriesEodListMetaPagination.md)
 - [VendorChartIQTimeSeriesEodSubsampleGetData](docs/VendorChartIQTimeSeriesEodSubsampleGetData.md)
 - [VendorChartIQTimeSeriesEodSubsampleGetDataInterval](docs/VendorChartIQTimeSeriesEodSubsampleGetDataInterval.md)
 - [VendorChartIQTimeSeriesEodSubsampleGetMeta](docs/VendorChartIQTimeSeriesEodSubsampleGetMeta.md)
 - [VendorChartIQTimeSeriesEodSubsampleListData](docs/VendorChartIQTimeSeriesEodSubsampleListData.md)
 - [VendorChartIQTimeSeriesIntradaySubsampleListData](docs/VendorChartIQTimeSeriesIntradaySubsampleListData.md)
 - [VendorChartIQTimeSeriesIntradaySubsampleListDataRange](docs/VendorChartIQTimeSeriesIntradaySubsampleListDataRange.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
